# aws-cost-explorer-mcp-server

./: .cursorrules  .gitignore  AWS_PROFILE_SWITCHING.md  PROVIDER_DEVELOPMENT.md  README.md  check_project_activity.py  gcp_cost_analysis_helper.md  list_gcp_projects.py  pyproject.toml  save_credentials.py  save_credentials_gcp.py  save_current_session.py  server_manual.py  start.py  start_with_current_creds.py
autocost_controller/: __init__.py  server.py
autocost_controller/core/: __init__.py  config.py  logger.py  models.py  provider_manager.py
autocost_controller/providers/: __init__.py
autocost_controller/providers/aws/: __init__.py  provider.py
autocost_controller/providers/azure/: __init__.py  provider.py
autocost_controller/providers/datadog/: __init__.py  auth.py  client.py  models.py  provider.py
autocost_controller/providers/gcp/: __init__.py  provider.py
autocost_controller/tools/: __init__.py  aws_cost_analysis.py  aws_performance.py  aws_tools.py  datadog_tools.py  gcp_cost_analysis.py  gcp_performance.py  gcp_tools.py
autocost_controller/tools/custom/: __init__.py  company_specific_tools.py
configs/: aws.json  datadog.json  datadog_config.json  gcp.json  unified.json
scripts/: run_aws.py
scripts/gcp/: save_gcp_session.py  start_with_gcp_creds.py
