[project]
name = "autocost-controller"
version = "1.0.0"
description = "Multi-Cloud Cost Analysis and Optimization Controller with MCP Integration"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
    {name = "Autocost Controller Team"}
]
license = {text = "MIT"}
keywords = ["aws", "gcp", "azure", "cost-optimization", "mcp", "cloud", "finops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "boto3>=1.37.9",
    "botocore>=1.37.9",
    "mcp>=1.3.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "tabulate>=0.9.0",
    "typing-extensions>=4.12.2",
    "colorama>=0.4.6",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

web = [
    "chainlit>=2.4.1",
    "streamlit>=1.44.1",
    "langchain>=0.3.20",
    "langchain-anthropic>=0.3.9",
    "langchain-aws>=0.2.15",
    "langchain-mcp-adapters>=0.0.4",
    "langgraph>=0.3.10",
]

gcp = [
    "google-cloud-billing>=1.12.0",
    "google-cloud-bigquery>=3.34.0",
    "google-cloud-monitoring>=2.16.0",
    "google-cloud-monitoring-dashboards>=2.13.0",
    "google-cloud-monitoring-metrics-scopes>=1.5.0",
    "google-cloud-resource-manager>=1.10.4",
    "google-cloud-container>=2.40.0",
    "google-cloud-storage>=2.14.0",
    "google-cloud-compute>=1.15.0",
    "google-auth>=2.28.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.120.0",
]

azure = [
    "azure-mgmt-consumption>=10.0.0",
    "azure-mgmt-monitor>=6.0.2",
    "azure-mgmt-resource>=23.0.1",
    "azure-identity>=1.15.0",
]

datadog = [
    "datadog-api-client>=2.20.0",
]

all = [
    "autocost-controller[gcp,azure,datadog]"
]

[project.scripts]
autocost-controller = "autocost_controller.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"
